Batch data processing & Testing